Change text color of overview links to fix color-contrast (#10)
change text color of overview links to fix color-contrast issue

--- a/src/DetailsView/Styles/detailsview.scss
+++ b/src/DetailsView/Styles/detailsview.scss
@@ -1562,7 +1562,6 @@ div.insights-dialog-main-override {
                             font-family: Segoe UI;
                             line-height: 20px;
                             font-size: 15px;
-                            color: $communication-primary;
                         }
                     }
                 }
