--- a/src/common/styles/common.scss
+++ b/src/common/styles/common.scss
@@ -54,6 +54,13 @@ button::after {
     }
 }
 
+.insights-link {
+    color: $communication-shade-10 !important;
+    &:hover {
+        color: $communication-shade-30;
+    }
+}
+
 $normalTitleFontWeight: 300 !default;
 
 $pivotItemLeftBorderWidth: 3px !default;
